static/css/style.css
.prewrap {
    white-space: pre-wrap;
}

/* Styles all body main text and buttons */
body, button {
    font-family: 'Contrail One', cursive;
}

/* Styles all nav and heading titles */
nav, h1, h2, h3, h4 {
    font-family: 'Faster One', cursive;
    letter-spacing: 2px;
}

/* Styles all small buttons */
.btn-small {
    margin: 5px;
}

/* Styles links on navbar  */
.nav-links li a {
    font-size: 1.2rem;
}

/* Styles all flash messages */
.flash-messages h4 {
    line-height: 2;
    font-family: 'Faster One', cursive;
}

/* Styles search and welcome section on home page */
.home-search, .welcome {
    height: 250px;
}

/* Styles search bar on home page */
.search-bar{
    padding-left: 12%;
    padding-top: 10vh;
}

/* Styles search bar on manage reviews page */ 
.admin-search-bar{
    padding-left: 33%;
    padding-top: 15vh;
}

/* Styles accordion titles */
.collapsible-header .col strong {
    margin: 10px;
    line-height: 35px;;
}

/* Styles reviews heading on profile page */
.your-revs-heading {
    padding-bottom: 5vh;
}

/* Creates a sticky footer  */
body {
    display: flex;
    min-height: 100vh;
    flex-direction: column;
  }
main {
    flex: 1 0 auto;
}

/* Styles the footer */
.footer {
 margin-top: 20px;   
 height: auto;
 background-color: rgba(0, 0, 0, 0.2);
}

footer .row {
    margin-bottom: 0;
}

/* Styles the footer links */
.social {
    font-size: 30px;
    margin-top: 2%;
}
.insta {
    color: #e1306c;;
}

/* Mobile view */
@media (max-width: 500px) {
/* Styles brand logo in mobile view */
nav .brand-logo {
font-size: 1.3rem;
}

/* Styles search bar on home page mobile */
.search-bar {
    padding-left: 8%;
    padding-top: 10vh;
}

/* Styles search bar on manage reviews page moblie */
.admin-search-bar {
    padding-left: 10%;
    padding-top: 5vh;
    padding-bottom: 5vh;
}

}

